--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,8 +27,7 @@ body {
 
 .content {
 	width: 950px;
-	height: 450px;
-	margin: 50px;
+	margin: 50px auto;
 	padding: 30px;
 	text-align: center;
 	border-radius: 30px;
@@ -77,14 +76,14 @@ body {
 }
 
 .qbox {
+	cursor: pointer;
 	border-radius: 30px;
 	width: 45%;
 	float: left;
 	border-color: #c60000;
 	border-style: solid;
 	border-width: 3px;
-	margin-left: 0;
-	margin-right: 41px;
+	margin: 0 41px 20px 0;
 }
 
 .answerNumber {
